syntax = "proto3";
import "Struct.proto";

service GossipService {
	rpc Gossip(GossipRequest) returns (GossipReply) {}
}

message TimeStamp {
	string key = 1;
	DIDAVersion replicaTimestamp = 2;
}

message GossipRequest {
	int32 replicaId = 1;
	repeated TimeStamp replicaTimestamp = 2;
	repeated DIDARecord updateLogs = 3;
}

message GossipReply {
	repeated TimeStamp replicaTimestamp = 1;
}
