syntax = "proto3";

message DIDAVersion {
	int32 versionNumber = 1;
	int32 replicaId = 2;
}

message DIDARecord {
	string id = 1;
	DIDAVersion version = 2;
	string val = 3;
}
